Cursor disappears when using tool gizmos with the Wayland backend #102048

Closed
opened 2022-10-25 12:31:28 +02:00 by Sebastian Parborg · 4 comments

System Information
Operating system: Gentoo Linux
Graphics card: AMD Vega 10

Blender Version
Broken: Git master

Short description of error
When using certain tool gizmos in the viewport the cursor disappears.

Exact steps for others to reproduce the error

  1. Load up default cube scene
  2. Switch to the "Rotate tool"
  3. Use a tablet to activate the rotate gizmo
  4. Position the tablet cursor so it is not on the gizmo when you let go
  5. The mouse cursor is not gone.

This happens on KDE Plasma (Wayland)

**System Information** Operating system: Gentoo Linux Graphics card: AMD Vega 10 **Blender Version** Broken: Git master **Short description of error** When using certain tool gizmos in the viewport the cursor disappears. **Exact steps for others to reproduce the error** 1. Load up default cube scene 2. Switch to the "Rotate tool" 3. Use a tablet to activate the rotate gizmo 4. Position the tablet cursor so it is not on the gizmo when you let go 5. The mouse cursor is not gone. This happens on KDE Plasma (Wayland)
Author
Member

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Campbell Barton was assigned by Sebastian Parborg 2022-10-25 12:31:46 +02:00

This issue was referenced by 78b13ab3db

This issue was referenced by 78b13ab3db70cca977585e29407445d2d1502fbf

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102048
No description provided.