Fix T102048: Tablet cursor remains hidden under KDE/Wayland